# cw-contract01

./: .gitignore  Cargo.toml  README.md  history_comm.md
schema/: counting_contract.json  execute_msg.json  instantiate_msg.json  query_msg.json
schema/raw/: execute.json  instantiate.json  response_to_value.json
src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs
src/multitest/: tests.rs
