[package]
name = "counting_contract"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library"]

[dependencies]
cosmwasm-schema = "2.0.2"
cosmwasm-std = "2.0.2"
cw-storage-plus = "2.0.0"
schemars = "0.8.17"
serde = "1.0.199"
thiserror = "1.0.59"
cw-multi-test = {version = "2.0.1", optional = true }
cw2 = "2.0.0"

[dev-dependencies]
cw-multi-test = "2.0.1"
# counting_contract-0_1_0 = { package = "counting_contract", version = "^0.1.0", path = "../counting_contract", features = ["tests"]}